feat(core): V2 architecture overhaul, Resource Auditor, Hell Mode fixes, and Stdlib expansion

--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,4 @@ Thumbs.db
 # Generated documentation dumps
 all_code.txt
 combined_ruby.txt
-juno_complete_source.txt
+juno_complete_source.txtmain
