--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,4 @@ Thumbs.db
 # Generated documentation dumps
 all_code.txt
 combined_ruby.txt
-juno_complete_source.txtmain
+juno_complete_source.txt
